--- a/assets/styles/theme/_theme.scss
+++ b/assets/styles/theme/_theme.scss
@@ -614,11 +614,25 @@ a:hover {
 	background-color: rgba(255, 255, 255, .95);
 }
 
+.navbar-small .navbar-brand .c9-custom-logo {
+	max-width: 285px;
+	max-height: 45px;
+	width: auto;
+	height: auto;
+}
+
 @media only screen and (min-width: 1px) and (max-width: 991px) {
 
 	.navbar-brand .c9-custom-logo {
 		max-width: 285px;
 		max-height: 92px;
+		width: auto;
+		height: auto;
+	}
+
+	.navbar-small .navbar-brand .c9-custom-logo {
+		max-width: 285px;
+		max-height: 45px;
 		width: auto;
 		height: auto;
 	}
@@ -1142,6 +1156,10 @@ a:hover {
 /****************************************************************************************/
 /* WordPress Core Blocks */
 /****************************************************************************************/
+.entry-content .wp-block-image:only-child,
+.entry-content .wp-block-image:last-child {
+	margin-bottom: 0px;
+}
 
 .entry-content hr,
 .wp-block-separator:not(.is-style-wide):not(.is-style-dots) {
@@ -1661,8 +1679,8 @@ object {
 /****************************************************************************************/
 .entry-content ul:not(.wp-block-gallery),
 .entry-content ol,
-.editor-styles-wrapper .editor-rich-text ol,
-.editor-styles-wrapper .editor-rich-text ul:not(.wp-block-gallery) {
+.editor-styles-wrapper ol,
+.editor-styles-wrapper ul:not(.wp-block-gallery) {
 	padding: 0px 20px;
 	margin: 30px 0px 45px 45px;
 }
@@ -1678,29 +1696,16 @@ object {
 	list-style-type: none;
 }
 
-.entry-content li>ul,
-.entry-content li>ol,
-.editor-styles-wrapper li>ol {
-	margin-bottom: 0px 0px 0px 15px;
-}
-
-.entry-content ol li,
-.editor-styles-wrapper ol li {
-	counter-increment: step-counter;
+.entry-content ul:not(.wp-block-gallery)>li>ul,
+.entry-content ol:not(.wp-block-gallery)>li>ol,
+.editor-styles-wrapper ul:not(.wp-block-gallery)>li>ul,
+.editor-styles-wrapper ol:not(.wp-block-gallery)>li>ol {
+	margin: 0px 0px 0px 15px;
 }
 
 .entry-content ol,
 .editor-styles-wrapper ol {
 	list-style-type: none;
-}
-
-.entry-content ol li:before,
-.editor-styles-wrapper ol li:before {
-	content: counter(step-counter);
-	width: 20px;
-	display: inline-block;
-	font-weight: $font-weight-bold;
-	margin: 0 0 0 -18px;
 }
 
 .entry-content ol li,
@@ -1716,6 +1721,26 @@ object {
 	display: inline-block;
 	font-weight: $font-weight-bold;
 	margin: 0 7px 0 -27px;
+}
+
+.entry-content ol li>ol>li,
+.editor-styles-wrapper ol li>ol>li {
+	counter-increment: inner-step-counter;
+}
+
+.entry-content ol li>ol>li>ol>li,
+.editor-styles-wrapper ol li>ol>li>ol>li {
+	counter-increment: inner-inner-step-counter;
+}
+
+.entry-content ol li>ol>li:before,
+.editor-styles-wrapper ol li>ol>li:before {
+	content: counter(inner-step-counter);
+}
+
+.entry-content ol li>ol>li>ol>li:before,
+.editor-styles-wrapper ol li>ol>li>ol>li:before {
+	content: counter(inner-inner-step-counter);
 }
 
 .entry-content ul:not(.wp-block-gallery) li,
